tests/snapshots/conformance__n_incomplete_false.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[fals]
stdout --- 
<empty>
stderr --- 
error: unexpected character `f`. expected start of a json value
 --> stdin:1:2
  |
1 | [fals]
  |  ^
